Add Acl to NodeAgentContextFactory and cache